<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_themes1"
    tools:context=".CakeCreateAccount">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="407dp"
        android:layout_height="240dp"
        android:background="@drawable/bg_themes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="156dp"
            android:layout_height="176dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/let_s_create_yoour_account"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="406dp"
        android:layout_height="641dp"
        android:layout_marginTop="9dp"
        android:alpha="0.7"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:autofillHints="Full Name"
        android:background="@drawable/bg_create"
        android:ems="10"
        android:inputType="text"
        android:text="@string/full_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Email Address"
        android:background="@drawable/bg_create"
        android:ems="10"
        android:inputType="text"
        android:text="@string/email_address"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1"
        tools:ignore="LabelFor" />


    <EditText
        android:id="@+id/et3"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Password"
        android:background="@drawable/bg_create"
        android:ems="10"
        android:inputType="text"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et2"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et4"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="Retype Password"
        android:background="@drawable/bg_create"
        android:ems="10"
        android:inputType="text"
        android:text="@string/retype_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et3"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/i_agree_to_the_team_privacy"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="261dp"
        android:layout_height="23dp"
        android:layout_marginTop="68dp"
        android:rotationX="4"
        android:rotationY="-11"
        android:text="@string/have_an_account_sign_in"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>